# Mactuner

./: .env  .env.example  .gitignore  README.md  app.py  chat_interface.py  data_eda.py  export_gguf.py  model_loader.py  pyproject.toml  rag_pipeline.py  test_data.csv  trainer.py
Mactuner.git.bak/: config  packed-refs
Mactuner.git.bak/objects/pack/: pack-c72afa4046226f35374fd9fb891a61a8c1b9fc81.idx  pack-c72afa4046226f35374fd9fb891a61a8c1b9fc81.pack  pack-c72afa4046226f35374fd9fb891a61a8c1b9fc81.rev
Markdown/: BACKEND_READY.md  CHECKPOINT_LOADING_FAQ.md  CHECKPOINT_LOADING_UPDATE.md  CHECKPOINT_PROGRESS_FIX.md  COMFYUI_STYLE_EDITOR.md  COMPLETE_PROJECT_SUMMARY.md  DATASET_EDITOR_INTEGRATION.md  DEVICE_MANAGER_QUICK_START.md  DEVICE_MANAGER_README.md  DEVICE_MANAGER_SETUP.md  DEVICE_MANAGER_SUMMARY.md  EDITOR_FIX_REPORT.md  EDITOR_IMPLEMENTATION_GUIDE.md  EDITOR_IMPLEMENTATION_SUMMARY.md  EDITOR_QUICK_START.md  ERROR_FIX_REPORT.md  FINAL_COMPREHENSIVE_SUMMARY.md  FINAL_STATUS.md  FIXES_APPLIED.md  FRONTEND_IMPLEMENTATION_GUIDE.md  FRONTEND_QUICK_START.md  HF_TOKEN_NODE_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LOGGING_IMPORT_FIX.md  MAC_COMPLETE_SETUP.md  MAC_FILES_SUMMARY.txt  MAC_SETUP.md  NODES_JSON_IMPLEMENTATION.md  NODE_CONNECTION_IMPLEMENTATION.md  PHASE1_COMPLETE.md  PHASE1_COMPLETE_FINAL.md  PHASE1_DATASET_COMPLETE.md  PHASE1_SUMMARY.md  PHASE1_TRAINING_COMPLETE.md  PHASE2_GGUF_COMPLETE.md  PHASE3_WEBUI_PLAN.md  PORT_COLORS_GUIDE.md  PORT_CONDITIONAL_DISPLAY.md  QUICK_START.md  (+9 more)
backend/: config.py  main.py  requirements.txt
backend/api/: __init__.py  chat_interface.py  dataset_tools.py  device_selector.py  export_gguf.py  model_loader.py  rag_pipeline.py  training.py  workflow.py
backend/services/: chat_service.py  dataset_service.py  device_manager.py  llama_cpp_service.py  model_service.py  quantization_service.py  rag_service.py  training_service.py
backend/utils/: mac_optimization.py
data/: dataset_history.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/electron/: main.js  preload.js
frontend/src/: App.tsx  index.css
frontend/src/@nodes/: ChatNode.json  CheckpointManagerNode.json  DatasetFilterNode.json  DatasetLoaderNode.json  DatasetPreprocessorNode.json  DatasetSplitterNode.json  DeviceSelectorNode.json  GgufExportNode.json  HFDatasetDownloaderNode.json  (+12 more)
tests/backend/: test_chat.py  test_dataset_tools.py  test_export_gguf.py  test_model_loader.py  test_rag.py  test_training.py
workflows/: custom_column_finetuning.json  korean_dialog_gemma_finetuning.json  workflow_1762599420779.json  workflow_1762602200081.json  workflow_1762602409023.json  workflow_1762603255575.json  workflow_1762609699355.json  workflow_custom_column.json  workflow_korean_dialog_gemma.json
(+28 files in other folders)
